3-Devops/6-Kubernetes/B - Kubernetes avançado/04-Ingress-Controller-Routing/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-portal
  namespace: study-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-portal
  template:
    metadata:
      labels:
        app: web-portal
    spec:
      containers:
        - name: web-portal
          image: ghcr.io/studies/web-portal:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
