3-Devops/6-Kubernetes/B - Kubernetes avançado/04-Ingress-Controller-Routing/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: study-ingress
spec:
  selector:
    app: orders-api
  ports:
    - port: 80
      targetPort: 8081
