3-Devops/6-Kubernetes/B - Kubernetes avançado/04-Ingress-Controller-Routing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 04-ingress-controller-routing-service
spec:
  type: NodePort
  selector:
    app: 04-ingress-controller-routing
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
