3-Devops/6-Kubernetes/B - Kubernetes avançado/04-Ingress-Controller-Routing/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-portal
  namespace: study-ingress
spec:
  selector:
    app: web-portal
  ports:
    - port: 80
      targetPort: 8080
