3-Devops/6-Kubernetes/B - Kubernetes avançado/04-Ingress-Controller-Routing/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: study-routes
  namespace: study-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - study.local
      secretName: study-local-tls
  rules:
    - host: study.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-portal
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  number: 80
